fixes issue #5367 (toc beautification): * display tooltip when a toc item has an abstract, cursor becomes a pointer (otherwise no tooltip, no pointer) - FIXME: if an abstract is visible, somehow the jquery selector @:hidden@ doesn't capture this. * provide an expandable/compressable box with a fixed height of 400px. a button (in the button group) allows to expand and compress the toc. by default, it is compressed, so that one can see that there is more underneath (related links), even if that is not yet functional * icons for download, by, read updared to buttons. they only show on hover, so they don't get in the way for long titles, but they are much more obvious and easy to use (bigger click surface, explanatory text)
also for working paper series and journals:
* order number is shown slightly smaller than surrounding text (I don't know but it does it for me)
* I've changed the left margin for the title to 11em, so that a very long title that breaks over to a new line is still nicely aligned with the first line.

PS: I probably did a reformat of the xsl file ... so kill me! :-)


git-svn-id: https://pacps01.oecd.org/svn/publication-index/trunk@216 370d6576-d9c0-ee4c-9843-071cdce0ebce

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -320,7 +320,7 @@ div.exhibit-views-header{
 }
 
 div.abstract{
-    margin:1em;
+    margin:1em 1em 3em 1em;
 }
 div.abstract > p{
     margin:0 0 0.5em;
@@ -332,7 +332,10 @@ div.abstract > p{
 #toc-root{
     clear:both;
 }
-
+.toc-box-condensed {
+    height: 400px;
+    overflow:auto;
+}
 .toc{
     list-style:none;
     margin:0;
@@ -345,7 +348,7 @@ li.toc-row:hover{
     background-color:#eaeaea;
 }
 
-div.toc-row-header{
+div.toc-row-clickable{
     cursor:pointer
 }
 
@@ -366,6 +369,7 @@ div.toc-row-header > .links a{
     display:block;
     float:left;
     margin-right:0.5em;
+    font-size:smaller;
 }
 .toc-pubdate{
     display:block;
@@ -382,7 +386,7 @@ div.toc-row-header > .links a{
     margin-left:1em;
 }
 .toc-pubdate + .toc-title{
-    margin-left:6.5em;
+    margin-left:11em;
 }
 
 div.toc-details{
@@ -391,7 +395,7 @@ div.toc-details{
 
 .toc-abstract{
     display:none;
-    border:1px dashed #eee;
+    /*border:1px dashed #eee;*/
     font-size:0.9em;
     padding:0.5em;
     margin:0.5em 0 0;
